fix user reviews align

--- a/src/style.css
+++ b/src/style.css
@@ -99,8 +99,7 @@ input::placeholder              { color: #0000005c; }
 .ReviewsSectionStatistics .ReviewsSectionStatistics__ratingStatistics { display: none; }                    /* hide starts count, already shown on sidebar */
 
 /* user reviews gravatar to the left, content centered */
-#ReviewsSection div:nth-child(7) > div:nth-child(2)                       { position: relative; left: -190px; }
-#ReviewsSection div:nth-child(7)                                          { width: 720px; }
+#ReviewsSection .ReviewCard                                           { left: -190px; width: 720px;}
 
 .FeaturedPerson__info                                                 { width: 515px; }
 
